fixing spacing for sign in button on resize

--- a/src/App.css
+++ b/src/App.css
@@ -523,43 +523,53 @@ body {
   height: 100%;
   width: 100%;
   overflow-y: hidden;
+  position: absolute;
 }
 .login-container {
   min-height: 100vh;
-  min-width: 70em;
+  min-width: 50%;
   position: absolute;
-  /* background-image: url("https://images.unsplash.com/photo-1533103601126-a65ecc2cfc39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"); */
-  background: url("https://images.unsplash.com/photo-1533103601126-a65ecc2cfc39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80")
-    /* no-repeat left left fixed; */;
+  /* background: #B5C8D6; */
+  background: url("https://images.unsplash.com/photo-1533103601126-a65ecc2cfc39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80");
   -webkit-background-size: cover;
   background-repeat: no-repeat;
   -moz-background-size: cover;
   background-size: cover;
   background-position: left left fixed;
+  overflow: hidden;
 }
 .login-div {
   height: 100%;
-  min-width: 25%;
+  min-width: 50%;
+  /* width: auto; */
   background-color: #f7f7f7;
   padding: 173px 55px 55px;
-  position: relative;
-  margin-left: 62em;
+  position: fixed;
+  margin-left: 50%;
   border: 1px solid black;
   background: #2575fc;
 }
 .login-title {
   text-align: center;
-  overflow: auto;
+  overflow: hidden;
+}
+.loginformtitle {
+  margin-top: 20%;
+  /* margin-left: 10%; */
+  margin-right: 20%;
+  width: 70%;
 }
 .login-form {
   justify-content: center;
   text-align: center;
   border-radius: 5px;
+  min-width: 20em;
 }
 
 #sign-in {
   text-align: center;
   border-radius: 3px;
+  margin-left: 0.75em;
 }
 .email {
   text-align: center;
